--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- javascript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.js"></script>
+        <!--script src="assets/js/jquery.js"></script>
         <script src="assets/js/bootstrap-transition.js"></script>
         <script src="assets/js/bootstrap-alert.js"></script>
         <script src="assets/js/bootstrap-modal.js"></script>
@@ -97,7 +97,7 @@
         <script src="assets/js/bootstrap-button.js"></script>
         <script src="assets/js/bootstrap-collapse.js"></script>
         <script src="assets/js/bootstrap-carousel.js"></script>
-        <script src="assets/js/bootstrap-typeahead.js"></script>
+        <script src="assets/js/bootstrap-typeahead.js"></script-->
 
         <script type="text/javascript">
             (function() {
